--- a/01-access-lab.adoc
+++ b/01-access-lab.adoc
@@ -1,15 +1,28 @@
-= Gluster Concepts Lab
+= Gluster Conceitos Lab
 
-In this set of exercises, you explore Red Hat Gluster Storage features and concepts with local and remote storage clusters, mount volumes using multiple protocols, work with volume snapshots, and use the console to configure geo-replication.
+Neste conjunto de exercícios você irá explorar as funcionalidades e conceitos do Red Hat Gluster Storage com clusters locais e remotos, montar volumes usando diferentes protocolos, trabalhar com snapshots de volume e usar o console para configurar geo-replicação.
 
-== 1. Access Lab Environment
-Perform this lab as root on the rhgs1.localdomain storage node. Remember that you must first connect to client1 before you can use SSH to access the storage nodes.
-    1. Use the SSH client of your choice to log in to client1-GUID.rhpds.opentlc.com (external name):
-       # ssh [OPENTLC-SSO-LOGIN]@client1-GUID.rhpds.opentlc.com
-        ◦ Replace GUID with the GUID provided in your provisioning email.
-        ◦ Use your OPENTLC SSO login name and your private key to authenticate.
-        ◦ If needed, you can use # sudo su - at any time to become root on the client1 system.
-    2. Log in remotely to rhgs1 host from client1:
-       [root@client1 ~]# ssh root@rhgs1
-        ◦ User: root
-        ◦ Password: Redhat12
+== 1. Acessando o Ambiente de Laboratório
+
+Execute este lab com seu usuario no servidor rhgs1.localdomain. Lembre de que você deve primeiro conectar no client1 antes de acessar os storage nodes.
+
+1 Use um cliente SSH a sua escolha e logue na estação client1-GUID.rhpds.opentlc.com (external name):
+
+----
+       # ssh <USUARIO>@client1-0514.rhpds.opentlc.com
+----
+[NOTE]
+====
+Utilize o <USUARIO> que será informado durante o workshop pelo instrutor.
+====
+
+2 Acesse o host rhgs<n> a partir do client1:
+
+       [root@client1 ~]# ssh root@rhgs<n>
+        ◦ Usuario: root
+        ◦ Senha: Redhat12
+
+[NOTE]
+====
+Utilize o servidor rhgs<n> que será informado durante o workshop pelo instrutor.
+====
