--- a/03-examine-storage.adoc
+++ b/03-examine-storage.adoc
@@ -6,52 +6,53 @@ Neste exercício você irá examinar um volume "two-way replica" chamado localvo
 
 O arquivo de configuração contem a parametrização para criação de RH Gluster Storage bricks usando o device /dev/vdb em cada nó, montando-os em /gluster/brick1, formatado como file system XFS.
 
-    1. Visualize o arquivo de configuração usado pelo gdeploy para criar o volume localvol:
+1 Visualize o arquivo de configuração usado pelo gdeploy para criar o volume localvol:
 ----
-       [user@rhgs1]# sudo cat /home/gdeploy_conf/local.conf
-       [hosts]
-       rhgs1
-       rhgs2
-       rhgs3
-       rhgs4
-       
-       [devices]
-       /dev/vdb
-       
-       [tune-profile]
-       none
-       
-       [peer]
-       manage=probe
-       # manage=detach
-       
-       [volume]
-       action=create
-       volname=localvol
-       transport=tcp,rdma
-       replica=yes
-       replica_count=2
-       # arbiter_count=2
-       force=yes
-----       
-    2. Analise as seções [hosts] e [devices] cuidadosamente.
+[user@rhgs1]# sudo cat /home/gdeploy_conf/local.conf
+[hosts]
+rhgs1
+rhgs2
+rhgs3
+rhgs4
 
-    3. Note que na seção [volume], replica=yes e replica_count=2 define localvol como um volume "two-way replicated".
+[devices]
+/dev/vdb
+
+[tune-profile]
+none
+
+[peer]
+manage=probe
+# manage=detach
+
+[volume]
+action=create
+volname=localvol
+transport=tcp,rdma
+replica=yes
+replica_count=2
+# arbiter_count=2
+force=yes
+----       
+2 Analise as seções [hosts] e [devices] cuidadosamente.
+
+3 Note que na seção [volume], replica=yes e replica_count=2 define localvol como um volume "two-way replicated".
 
 == 3.2 Verificação do Volume
 
-    1. Veja os block devices no servidor para confirmar que /gluster/brick1 brick esta montado em /dev/vdb:
+1 Veja os block devices no servidor para confirmar que /gluster/brick1 brick esta montado em /dev/vdb:
 ----
-       [user@rhgs1]# lsblk
+[user@rhgs1]# lsblk
 ----
 
-    2. Verifique o status do cluster:
+2 Verifique o status do cluster:
 ----    
-       # gluster peer status
+# gluster peer status
 ----       
-    3. Confirme que o volume do Red Hat Gluster Storageesta iniciado e tem o status "Started":
+
+3 Confirme que o volume do Red Hat Gluster Storageesta iniciado e tem o status "Started":
 ----    
-       # gluster volume info
+# gluster volume info
 ----       
 
 = 4. Examine o Storage Cluster Secundário (Remoto)
@@ -62,54 +63,54 @@ Neste exercício você irá examinar o segundo volume "two-way replicated" chama
 
 O arquivo de configuração requisita a criação dos RH Gluster Storage bricks usando os devices /dev/vdb e /dev/vdc em cada nó, montando em /gluster/brick1 e /gluster/brick2, formatados como XFS
 
-    1. Visualize o arquivo de configuração usado pelo gdeploy para criar o volume remotevol:
+1 Visualize o arquivo de configuração usado pelo gdeploy para criar o volume remotevol:
 ----
-       [user@rhgs1]# sudo cat /home/gdeploy_conf/remote.conf
-       [hosts]
-       remote-rhgs1
-       remote-rhgs2
-       
-       [devices]
-       /dev/vdb
-       /dev/vdc
-       
-       [tune-profile]
-       none
-       
-       [peer]
-       manage=probe
-       # manage=detach
-       
-       [volume]
-       action=create
-       volname=remotevol
-       transport=tcp,rdma
-       replica=yes
-       replica_count=2
-       # arbiter_count=2
-       force=yes
-----       
-    2. Analise as seções [hosts] e [devices] cuidadosamente.
+[user@rhgs1]# sudo cat /home/gdeploy_conf/remote.conf
+[hosts]
+remote-rhgs1
+remote-rhgs2
 
-    3. Note que na seção [volume], replica=yes e replica_count=2 define remotevol como um volume "two-way replicated".
+[devices]
+/dev/vdb
+/dev/vdc
+
+[tune-profile]
+none
+
+[peer]
+manage=probe
+# manage=detach
+
+[volume]
+action=create
+volname=remotevol
+transport=tcp,rdma
+replica=yes
+replica_count=2
+# arbiter_count=2
+force=yes
+----       
+2 Analise as seções [hosts] e [devices] cuidadosamente.
+
+3 Note que na seção [volume], replica=yes e replica_count=2 define remotevol como um volume "two-way replicated".
 
 == 4.2. Verifique o volume:
 
-    1. Conecte no servidor remote-rhgs1 usando SSH para verificar o status:
+1 Conecte no servidor remote-rhgs1 usando SSH para verificar o status:
 ----
-       [user@rhgs1]# ssh user@remote-rhgs1
+[user@rhgs1]# ssh user@remote-rhgs1
 ----
 
-    2. Verifique os block devices no servidor remote-rhsg1 foram criados e montados em /gluster/brick[1,2]:
+2 Verifique os block devices no servidor remote-rhsg1 foram criados e montados em /gluster/brick[1,2]:
 ----
        [root@remote-rhgs1 ~]# lsblk
 ----
 
-    3. Verifique o status do cluster:
+3 Verifique o status do cluster:
 ----
-       # gluster peer status
+# gluster peer status
 ----
-    4. Confirme que o volume do gluster foi criado e seu status é "Started":
+4 Confirme que o volume do gluster foi criado e seu status é "Started":
 ----
-       # gluster volume info
+# gluster volume info
 ----       
