--- a/04-access-volumes.adoc
+++ b/04-access-volumes.adoc
@@ -19,9 +19,10 @@ Neste exercício você irá acessar os volumes glustervol e remotevol, a partir 
 
 3 Crie um diretório de teste local no ponto de montagem glustervol e crie 100 arquivos
 ----
-# cd /mnt/local
-# mkdir test1
-# cd test1
+# user_id=$(whoami)
+# cd /mnt/local$user_id
+# mkdir test$user_id
+# cd test$user_id
 # for i in `seq 1 100`
 do
 echo hello$i > file$i
